--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -21,8 +21,8 @@
     <p>Noodles, Salt, water, Tomato, garlic</p>
     <h4>steps</h4>
     <ol>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Milk</li>
+        <li>Take 250-500g Noodles and 500ml-1000ml water and amount of salt</li>
+        <li>cook the noodles in the water</li>
+        <li>make tomatosauce with garlic and onions</li>
       </ol>
 </html>
