new links to recipes sites

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/noodles.html">noodles</a>
+        <a href="recipes/english_breakfast.html">english_breakfast</a>
+        <a href="recipes/pizza.html">pizza</a>
     </body>
 </html>
