--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"
     <title>Odin Links and Images</title>
+   <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -10,5 +11,9 @@
         <a href="recipes/noodles.html">noodles</a>
         <a href="recipes/english_breakfast.html">english_breakfast</a>
         <a href="recipes/pizza.html">pizza</a>
+       <div>Hello, World!</div>
+       <div>Hello again!</div>
+       <p>Hi...</p>
+       <div>Okay, bye.</div>
     </body>
 </html>
