--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"
     <title>Odin Links and Images</title>
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="recipes/styles.css">
     </head>
 
     <body>
