--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,6 @@
    </style>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="background-color: yellow;font-size: 20 px">Inline Method</button>
   </body>
 </html>
