--- a/index4.html
+++ b/index4.html
@@ -10,5 +10,13 @@
   <body>
     <button class="unread">Click Me!</button>
     <button class="read">No, Click Me!</button>
+    <div>
+      <img class="avatar pro" src="recipes/images/Pizza.jpg" alt="">
+      <img class="avatar neg" src="recipes/images/noodles.jpg" alt="">
+    </div>
+    <div>
+      <img class="original pro" src="recipes/images/Pizza.jpg" alt="">
+      <img class="original neg" src="recipes/images/noodles.jpg" alt="">
+    </div>
   </body>
 </html>
