änderung Span Versuch

--- a/index7.html
+++ b/index7.html
@@ -15,6 +15,6 @@
   <li>Item Three</li>
 </ul>
 <p>I am another paragraph. Some of the <span class="block">words</span> have been wrapped in a <span>span element</span>.</p>
-    
+<p>i am another second paragraph. Some of the <span class="block">words</span> </p>
 </body>    
 </html>
