--- a/border_boxmodel.html
+++ b/border_boxmodel.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="recipes/BoxModel2.css"
   </head>
   <body>
-    <p>I am a paragraph. A short one.</p>
+    <p>I am a paragraph. A short one.
+      or a longer one?
+
+
+
+
+      initial-scale
+      dknekfnejfr enddj
+      
+    </p>
 <ol>
 <ul>
   <li>Item One</li>
