--- a/border_boxmodel.html
+++ b/border_boxmodel.html
@@ -8,15 +8,22 @@
     <link rel="stylesheet" href="recipes/BoxModel2.css"
   </head>
   <body>
-    <p>I am a paragraph. A short one.
-      or a longer one?
+    <div class="introduction">
+      <h2>Introduction</h2>
+   </div>
+   
+   <div class="main-content">
+      <h2>Main Content</h2>
+   </div>
+   
+   <div class="contact-us">
+      <h2>Contact Us</h2>
+   </div>
+    <p>Most of the elements that you have learned about so far are block elements. In other words, their default style is display: block. By default, block elements will appear on the page stacked atop each other, each new element starting on a new line.
 
-
-
-
-      initial-scale
-      dknekfnejfr enddj
+      Inline elements, however, do not start on a new line. They appear in line with whatever elements they are placed beside. A clear example of an inline element is a link, or <a> tag. If you stick one of these in the middle of a paragraph of text, it will behave like a part of the paragraph. (Like this…) The link’s text will sit alongside other words in that paragraph. Additionally, padding and margin behave differently on inline elements. In general, you do not want to try to put extra padding or margin on inline elements.
       
+      Inline-block elements behave like inline elements, but with block-style padding and margin. Inline-block is a useful tool to know about, but in practice, you’ll probably end up reaching for flexbox more often if you’re trying to line up a bunch of boxes. Flexbox will be covered in-depth in the next lesson.
     </p>
 <ol>
 <ul>
@@ -25,6 +32,6 @@
   <li>Item Three</li>
 </ul>
 </ol>
-<p>I am another paragraph. Some of the <span class="block">words</span> have been wrapped in a <span>span element</span>.</p>
+<p>I am another paragraph. Some of the <span class="block">words</span> have been wrapped in a <span>span element, I</span>.</p>
 <p>i am another second paragraph. Some of the <span class="block">words</span> </p>
   </body>
